--- a/InvSupply/src/Views/PartUpdate.fxml
+++ b/InvSupply/src/Views/PartUpdate.fxml
@@ -13,17 +13,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="451.0" prefWidth="442.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PartsUpdateController">
+<AnchorPane id="AnchorPane" prefHeight="451.0" prefWidth="442.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.PartScreenController">
    <children>
       <HBox layoutX="203.0" layoutY="70.0" prefHeight="25.0" prefWidth="213.0">
-         
-          <children>
+         <children>
             <RadioButton fx:id="inhousePart" maxHeight="-Infinity" minHeight="-Infinity" minWidth="85.0" mnemonicParsing="false" onAction="#partType" prefHeight="17.0" text="In-House">
                <toggleGroup>
-                  <ToggleGroup fx:id="source" />
+                  <ToggleGroup fx:id="typeOfPart" />
                </toggleGroup></RadioButton>
-           
-               <RadioButton fx:id="outsourcedPart" maxHeight="-Infinity" minHeight="-Infinity" minWidth="95.0" mnemonicParsing="false" onAction="#partType" prefHeight="17.0" text="Outsourced" toggleGroup="$source">
+            <RadioButton fx:id="outsourcedPart" maxHeight="-Infinity" minHeight="-Infinity" minWidth="95.0" mnemonicParsing="false" onAction="#partType" prefHeight="17.0" text="Outsourced" toggleGroup="$typeOfPart">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -47,19 +45,19 @@
          <children>
             <Label text="ID" />
             <Label text="Name" GridPane.rowIndex="1" />
-            <Label text="Supply" GridPane.rowIndex="2" />
-            <Label text="Price" GridPane.rowIndex="3" />
+            <Label text="Inv" GridPane.rowIndex="2" />
+            <Label text="Price/Cost" GridPane.rowIndex="3" />
             <Label text="Max" GridPane.rowIndex="4" />
             <Label text="Machine ID" GridPane.rowIndex="5" />
             <Label text="Company Name" GridPane.rowIndex="6" />
-            <TextField fx:id="partID" disable="true" editable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
+            <TextField fx:id="partId" disable="true" editable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
             <TextField fx:id="partName" maxWidth="-Infinity" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="Min" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="65.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="partSupply" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="partInv" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="partCost" maxWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="partMax" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="partMin" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -67,8 +65,8 @@
                   <Insets left="90.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="machineID" maxWidth="-Infinity" prefHeight="25.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="company" maxWidth="-Infinity" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="partMachineId" maxWidth="-Infinity" prefHeight="25.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="partCompany" maxWidth="-Infinity" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <Label fx:id="partLabel" layoutX="55.0" layoutY="40.0" text="Add Part">
@@ -76,11 +74,11 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button layoutX="259.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#saveButton" prefHeight="25.0" text="Save" textAlignment="CENTER">
+      <Button layoutX="259.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#savePart" prefHeight="25.0" text="Save" textAlignment="CENTER">
          <padding>
             <Insets bottom="4.0" left="10.0" right="10.0" top="4.0" />
          </padding>
       </Button>
-      <Button layoutX="328.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="25.0" text="Cancel" />
+      <Button layoutX="328.0" layoutY="372.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#cancelPart" prefHeight="25.0" text="Cancel" />
    </children>
 </AnchorPane>
