--- a/IMSystem/src/Views/MainScreen.fxml
+++ b/IMSystem/src/Views/MainScreen.fxml
@@ -16,31 +16,31 @@
          <children>
             <HBox layoutX="225.0" layoutY="45.0" prefHeight="28.0" prefWidth="266.0">
                <children>
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#searchParts" prefHeight="25.0" text="Search" />
-                  <TextField fx:id="searchPart">
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partSearch" prefHeight="25.0" text="Search" />
+                  <TextField fx:id="partSearch">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
-            <TableView fx:id="partTable" layoutX="3.0" layoutY="77.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="480.0">
+            <TableView fx:id="partsTable" layoutX="3.0" layoutY="77.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="480.0">
               <columns>
-                <TableColumn fx:id="partIdColumn" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Part ID" />
-                <TableColumn fx:id="partNameColumn" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Part Name" />
-                  <TableColumn fx:id="partInvColumn" maxWidth="132.0" minWidth="110.0" prefWidth="132.0" resizable="false" text="Inventory Level" />
-                  <TableColumn fx:id="partCostColumn" maxWidth="189.0" minWidth="128.0" prefWidth="167.0" resizable="false" text="Price/Cost per Unit" />
+                <TableColumn fx:id="IDColumn" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Part ID" />
+                <TableColumn fx:id="NameColumn" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Part Name" />
+                  <TableColumn fx:id="SupplyColumn" maxWidth="132.0" minWidth="110.0" prefWidth="132.0" resizable="false" text="Supply Level" />
+                  <TableColumn fx:id="CostColumn" maxWidth="189.0" minWidth="128.0" prefWidth="167.0" resizable="false" text="Price " />
               </columns>
             </TableView>
             <HBox layoutX="260.0" layoutY="285.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="231.0">
                <children>
                   <Button maxHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#addPart" prefHeight="25.0" text="Add" />
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#changePart" prefHeight="25.0" text="Modify">
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partMod" prefHeight="25.0" text="Modify">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#deletePart" prefHeight="25.0" text="Delete">
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partDelete" prefHeight="25.0" text="Delete">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -62,7 +62,7 @@
             <HBox layoutX="264.0" layoutY="43.0" prefHeight="28.0" prefWidth="254.0">
                <children>
                   <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#searchProducts" prefHeight="25.0" text="Search" />
-                  <TextField fx:id="searchProduct">
+                  <TextField fx:id="proSearch">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -71,21 +71,21 @@
             </HBox>
             <TableView fx:id="productTable" layoutX="19.0" layoutY="77.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="499.0">
                <columns>
-                  <TableColumn fx:id="productIdColumn" maxWidth="84.0" minWidth="84.0" prefWidth="84.0" resizable="false" text="Product ID" />
-                  <TableColumn fx:id="productNameColumn" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Product Name" />
-                  <TableColumn fx:id="productInvColumn" maxWidth="143.0" minWidth="110.0" prefWidth="143.0" resizable="false" text="Inventory Level" />
-                  <TableColumn fx:id="productCostColumn" maxWidth="184.0" minWidth="125.0" prefWidth="151.0" resizable="false" text="Price/Cost per Unit" />
+                  <TableColumn fx:id="proIDColumn" maxWidth="84.0" minWidth="84.0" prefWidth="84.0" resizable="false" text="Product ID" />
+                  <TableColumn fx:id="proNameColumn" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Product Name" />
+                  <TableColumn fx:id="proSupplyColumn" maxWidth="143.0" minWidth="110.0" prefWidth="143.0" resizable="false" text="Inventory Level" />
+                  <TableColumn fx:id="proCostColumn" maxWidth="184.0" minWidth="125.0" prefWidth="151.0" resizable="false" text="Price" />
                </columns>
             </TableView>
             <HBox layoutX="287.0" layoutY="284.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="231.0">
                <children>
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="25.0" text="Add" />
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#changeProduct" prefHeight="25.0" text="Modify">
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#proAdd" prefHeight="25.0" text="Add" />
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#proMod" prefHeight="25.0" text="Modify">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#deleteProduct" prefHeight="25.0" text="Delete">
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#proDelete" prefHeight="25.0" text="Delete">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -102,8 +102,8 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </AnchorPane>
-      <Button layoutX="987.0" layoutY="411.0" maxHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#exitProgram" prefHeight="25.0" text="Exit" />
-      <Label layoutX="14.0" layoutY="14.0" text="Inventory Management System">
+      <Button layoutX="987.0" layoutY="411.0" maxHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#exit" prefHeight="25.0" text="Exit" />
+      <Label layoutX="14.0" layoutY="14.0" text="Supply Management System">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
