--- a/IMSystem/src/Views/Parts.fxml
+++ b/IMSystem/src/Views/Parts.fxml
@@ -13,15 +13,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="451.0" prefWidth="442.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.PartScreenController">
+<AnchorPane id="AnchorPane" prefHeight="451.0" prefWidth="442.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PartsController">
    <children>
       <HBox layoutX="203.0" layoutY="70.0" prefHeight="25.0" prefWidth="213.0">
          <children>
-            <RadioButton fx:id="inhousePart" maxHeight="-Infinity" minHeight="-Infinity" minWidth="85.0" mnemonicParsing="false" onAction="#partType" prefHeight="17.0" text="In-House">
+            <RadioButton fx:id="inhouse" maxHeight="-Infinity" minHeight="-Infinity" minWidth="85.0" mnemonicParsing="false" onAction="#toggle" prefHeight="17.0" text="InHouse">
                <toggleGroup>
-                  <ToggleGroup fx:id="typeOfPart" />
+                  <ToggleGroup fx:id="groupToggle" />
                </toggleGroup></RadioButton>
-            <RadioButton fx:id="outsourcedPart" maxHeight="-Infinity" minHeight="-Infinity" minWidth="95.0" mnemonicParsing="false" onAction="#partType" prefHeight="17.0" text="Outsourced" toggleGroup="$typeOfPart">
+            <RadioButton fx:id="outsourced" maxHeight="-Infinity" minHeight="-Infinity" minWidth="95.0" mnemonicParsing="false" onAction="#toggle" prefHeight="17.0" text="Outsourced" toggleGroup="$groupToggle">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -45,19 +45,19 @@
          <children>
             <Label text="ID" />
             <Label text="Name" GridPane.rowIndex="1" />
-            <Label text="Inv" GridPane.rowIndex="2" />
-            <Label text="Price/Cost" GridPane.rowIndex="3" />
+            <Label text="Supply" GridPane.rowIndex="2" />
+            <Label text="Price" GridPane.rowIndex="3" />
             <Label text="Max" GridPane.rowIndex="4" />
             <Label text="Machine ID" GridPane.rowIndex="5" />
             <Label text="Company Name" GridPane.rowIndex="6" />
-            <TextField fx:id="partId" disable="true" editable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
+            <TextField fx:id="partID" disable="true" editable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
             <TextField fx:id="partName" maxWidth="-Infinity" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="Min" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="65.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="partInv" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="partSupply" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="partCost" maxWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="partMax" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="partMin" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -65,7 +65,7 @@
                   <Insets left="90.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="partMachineId" maxWidth="-Infinity" prefHeight="25.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="machineID" maxWidth="-Infinity" prefHeight="25.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="partCompany" maxWidth="-Infinity" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
