--- a/IMSystem/src/Views/Products.fxml
+++ b/IMSystem/src/Views/Products.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="793.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ProductScreenController">
+<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="793.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductController">
    <children>
       <GridPane layoutX="37.0" layoutY="120.0" prefHeight="180.0" prefWidth="241.0">
          <columnConstraints>
@@ -30,12 +30,12 @@
          <children>
             <Label text="ID" />
             <Label text="Name" GridPane.rowIndex="1" />
-            <Label text="Inv" GridPane.rowIndex="2" />
-            <Label text="Price/Cost" GridPane.rowIndex="3" />
+            <Label text="Supply" GridPane.rowIndex="2" />
+            <Label text="Cost" GridPane.rowIndex="3" />
             <Label text="Max" GridPane.rowIndex="4" />
-            <TextField fx:id="productId" disable="true" editable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
+            <TextField fx:id="productID" disable="true" editable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
             <TextField fx:id="productName" maxWidth="-Infinity" prefHeight="25.0" prefWidth="143.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
-            <TextField fx:id="productInv" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="productSupply" maxWidth="-Infinity" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Min" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="80.0" />
@@ -64,26 +64,26 @@
             </HBox>
             <TableView fx:id="partNew" layoutX="6.0" layoutY="36.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="432.0">
                <columns>
-                  <TableColumn fx:id="partIdNew" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Part ID" />
-                  <TableColumn fx:id="partNameNew" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Part Name" />
-                  <TableColumn fx:id="partInvNew" maxWidth="128.0" minWidth="120.0" prefWidth="128.0" resizable="false" text="Inventory Level" />
-                  <TableColumn fx:id="partCostNew" maxWidth="131.0" minWidth="91.0" prefWidth="123.0" resizable="false" text="Price per Unit" />
+                  <TableColumn fx:id="partID" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Part ID" />
+                  <TableColumn fx:id="partName" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Part Name" />
+                  <TableColumn fx:id="partSupply" maxWidth="128.0" minWidth="120.0" prefWidth="128.0" resizable="false" text="Supply Level" />
+                  <TableColumn fx:id="partCost" maxWidth="131.0" minWidth="91.0" prefWidth="123.0" resizable="false" text="Price per Unit" />
                </columns>
             </TableView>
-            <Button layoutX="378.0" layoutY="189.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#addPart" prefHeight="25.0" text="Add" />
+            <Button layoutX="378.0" layoutY="189.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partAdd" prefHeight="25.0" text="Add" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="336.0" layoutY="242.0" prefHeight="205.0" prefWidth="446.0">
          <children>
             <TableView fx:id="productParts" layoutX="6.0" layoutY="13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="432.0">
                <columns>
-                  <TableColumn fx:id="productPartId" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Part ID" />
-                  <TableColumn fx:id="productPartName" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Part Name" />
-                  <TableColumn fx:id="productPartInv" maxWidth="133.0" minWidth="120.0" prefWidth="131.0" resizable="false" text="Inventory Level" />
-                  <TableColumn fx:id="productPartCost" maxWidth="131.0" minWidth="91.0" prefWidth="120.0" resizable="false" text="Price per Unit" />
+                  <TableColumn fx:id="proID" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Part ID" />
+                  <TableColumn fx:id="proName" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" text="Part Name" />
+                  <TableColumn fx:id="proSupply" maxWidth="133.0" minWidth="120.0" prefWidth="131.0" resizable="false" text="Supply Level" />
+                  <TableColumn fx:id="proPrice" maxWidth="131.0" minWidth="91.0" prefWidth="120.0" resizable="false" text="Price per Unit" />
                </columns>
             </TableView>
-            <Button layoutX="378.0" layoutY="166.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#deletePart" prefHeight="25.0" text="Delete" />
+            <Button layoutX="378.0" layoutY="166.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partDelete" prefHeight="25.0" text="Delete" />
          </children>
       </AnchorPane>
       <HBox layoutX="620.0" layoutY="473.0" prefHeight="28.0" prefWidth="159.0">
